// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> should render Label with all the correct props 1`] = `
<label
  class="label classToExtend"
  for="form1"
  form="form2"
>
  a super interesting text
</label>
`;

exports[`<Label /> should render Label with the checkbox component 1`] = `
<label
  class="label classToExtend"
  for="form1"
  form="form2"
>
  a super interesting text
  <div
    class="checkbox "
  >
    
  </div>
</label>
`;
